Final code push for Android

--- a/samples/android/app/src/main/res/layout/activity_main.xml
+++ b/samples/android/app/src/main/res/layout/activity_main.xml
@@ -48,4 +48,15 @@
         app:srcCompat="@android:drawable/ic_input_add"
         android:contentDescription="@string/action_add_item" />
 
+    <ProgressBar
+        android:id="@+id/busy_indicator"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/appBarLayout" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
