--- a/samples/xamarin-forms/ZumoQuickstart/ZumoQuickstart/TodoListPage.xaml
+++ b/samples/xamarin-forms/ZumoQuickstart/ZumoQuickstart/TodoListPage.xaml
@@ -4,11 +4,19 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Title="{Binding Title}">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Command="{Binding RefreshItemsCommand}" IconImageSource="refresh.png" />
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout
             AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
             AbsoluteLayout.LayoutFlags="All"
             BackgroundColor="Azure">
+            <ActivityIndicator
+                HeightRequest="4"
+                IsRunning="{Binding IsRefreshing}"
+                IsVisible="{Binding IsRefreshing}"
+                Color="Red" />
             <!--  The list of items  -->
             <ListView
                 IsPullToRefreshEnabled="True"
