--- a/samples/xamarin-android/Resources/layout/content_main.xml
+++ b/samples/xamarin-android/Resources/layout/content_main.xml
@@ -7,10 +7,11 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Hello World!" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/item_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="@dimen/row_margin"
+        tools:listitem="@layout/row_list_item" />
 
 </RelativeLayout>
