--- a/samples/xamarin-android/Resources/layout/activity_main.xml
+++ b/samples/xamarin-android/Resources/layout/activity_main.xml
@@ -37,6 +37,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:layout_gravity="middle"/>
+        android:layout_gravity="center"/>
 
 </android.support.design.widget.CoordinatorLayout>
