--- a/samples/uwp/MainPage.xaml
+++ b/samples/uwp/MainPage.xaml
@@ -2,13 +2,88 @@
     x:Class="ZumoQuickstart.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ZumoQuickstart"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:ZumoQuickstart"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    mc:Ignorable="d">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="10" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
 
+        <ProgressBar
+            x:Name="isRefreshingControl"
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="3"
+            IsEnabled="{Binding IsRefreshing}"
+            IsIndeterminate="True"
+            Maximum="100"
+            Minimum="0"
+            Visibility="{Binding IsRefreshing, Mode=OneWay}" />
+
+        <ListView
+            x:Name="itemListControl"
+            Grid.Row="1"
+            Grid.Column="0"
+            Grid.ColumnSpan="3"
+            Margin="10"
+            ItemsSource="{Binding Items}">
+
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <CheckBox
+                        Margin="10"
+                        Command="{Binding UpdateItemCommand}"
+                        Content="{Binding Text}"
+                        IsChecked="{Binding Complete}"
+                        Tag="{Binding Id}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <TextBox
+            x:Name="textBoxControl"
+            Grid.Row="2"
+            Grid.Column="0"
+            BorderBrush="Indigo"
+            FontSize="20"
+            KeyDown="TextboxKeyDownHandler"
+            PlaceholderText="Enter some text..."
+            Text="{Binding TextBoxContext, Mode=TwoWay}" />
+
+        <Button
+            x:Name="addItemButtonControl"
+            Grid.Row="2"
+            Grid.Column="1"
+            Margin="4"
+            Command="{Binding AddItemCommand}"
+            Style="{StaticResource ImageButtonStyle}">
+            <Image
+                Width="24"
+                Height="24"
+                Source="/Assets/additem.png" />
+        </Button>
+
+        <Button
+            x:Name="refreshItemsButtonControl"
+            Grid.Row="2"
+            Grid.Column="2"
+            Margin="4"
+            Command="{Binding RefreshItemsCommand}"
+            Style="{StaticResource ImageButtonStyle}">
+            <Image
+                Width="24"
+                Height="24"
+                Source="/Assets/refresh.png" />
+        </Button>
     </Grid>
 </Page>
