--- a/samples/uwp/App.xaml
+++ b/samples/uwp/App.xaml
@@ -2,6 +2,22 @@
     x:Class="ZumoQuickstart.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="using:Microsoft.Toolkit.Uwp.UI.Converters"
     xmlns:local="using:ZumoQuickstart">
+    <Application.Resources>
+        <ResourceDictionary>
+            <Style x:Key="ImageButtonStyle" TargetType="Button">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <ContentPresenter />
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+        </ResourceDictionary>
+    </Application.Resources>
 
 </Application>
