--- a/samples/uwp/Views/MainPage.xaml
+++ b/samples/uwp/Views/MainPage.xaml
@@ -3,20 +3,22 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="using:ZumoQuickstart"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:models="using:ZumoQuickstart.Models"
+    xmlns:viewModels="using:ZumoQuickstart.ViewModels"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     mc:Ignorable="d">
+    <Page.DataContext>
+        <viewModels:MainPageViewModel x:Name="ViewModel" />
+    </Page.DataContext>
     <Page.Resources>
-        <Style x:Key="ImageButtonStyle" TargetType="Button">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <ContentPresenter />
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
+        <DataTemplate x:Name="ListItemTemplate" x:DataType="models:TodoItem">
+            <CheckBox
+                Margin="10"
+                Content="{x:Bind Text}"
+                IsChecked="{x:Bind Complete}"
+                Tag="{x:Bind Id}" />
+        </DataTemplate>
     </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -32,68 +34,47 @@
 
         <ProgressBar
             x:Name="isRefreshingControl"
-            Grid.Row="0"
-            Grid.Column="0"
             Grid.ColumnSpan="3"
-            IsEnabled="{x:Bind IsRefreshing}"
+            IsEnabled="{x:Bind Path=ViewModel.IsRefreshing, Mode=OneWay}"
             IsIndeterminate="True"
             Maximum="100"
             Minimum="0"
-            Visibility="{x:Bind IsRefreshing, Mode=OneWay}" />
+            Visibility="{x:Bind Path=ViewModel.IsRefreshing, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}" />
 
         <ListView
             x:Name="itemListControl"
             Grid.Row="1"
-            Grid.Column="0"
             Grid.ColumnSpan="3"
             Margin="10"
-            ItemsSource="{x:Bind Items}">
-
-            <ListView.ItemTemplate>
-                <DataTemplate x:DataType="local:TodoItem">
-                    <CheckBox
-                        Margin="10"
-                        Checked="CheckboxCheckedHandler"
-                        Content="{x:Bind Text}"
-                        IsChecked="{x:Bind Complete}"
-                        Tag="{x:Bind Id}" />
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+            ItemTemplate="{StaticResource ListItemTemplate}"
+            ItemsSource="{x:Bind Path=ViewModel.Items}" />
 
         <TextBox
-            x:Name="textBoxControl"
+            x:Name="newItemTextBoxControl"
             Grid.Row="2"
             Grid.Column="0"
-            BorderBrush="Indigo"
             FontSize="20"
-            KeyDown="TextboxKeyDownHandler"
-            PlaceholderText="Enter some text..."
-            Text="{x:Bind Path=TextBoxContent, Mode=TwoWay}" />
+            PlaceholderText="Enter some text..." />
 
         <Button
-            x:Name="addItemButtonControl"
             Grid.Row="2"
             Grid.Column="1"
-            Margin="4"
-            Click="AddItemClickedHandler"
+            IsEnabled="{x:Bind ViewModel.IsNotRefreshing}"
             Style="{StaticResource ImageButtonStyle}">
             <Image
-                Width="24"
-                Height="24"
+                Width="30"
+                Height="30"
                 Source="/Assets/additem.png" />
         </Button>
 
         <Button
-            x:Name="refreshItemsButtonControl"
             Grid.Row="2"
             Grid.Column="2"
-            Margin="4"
-            Click="RefreshItemsClickedHandler"
+            IsEnabled="{x:Bind ViewModel.IsNotRefreshing}"
             Style="{StaticResource ImageButtonStyle}">
             <Image
-                Width="24"
-                Height="24"
+                Width="30"
+                Height="30"
                 Source="/Assets/refresh.png" />
         </Button>
     </Grid>
