--- a/samples/TodoApp/TodoApp.WPF/MainWindow.xaml
+++ b/samples/TodoApp/TodoApp.WPF/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="TodoApp.WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="600" Width="450">
+        Title="TodoApp" Height="600" Width="450">
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
