--- a/samples/TodoApp/TodoApp.Android/Resources/layout/row_list_item.xml
+++ b/samples/TodoApp/TodoApp.Android/Resources/layout/row_list_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <CheckBox
         android:id="@+id/check_todo_item"
