--- a/samples/TodoApp/TodoApp.MAUI/MainPage.xaml
+++ b/samples/TodoApp/TodoApp.MAUI/MainPage.xaml
@@ -6,43 +6,55 @@
              x:DataType="app:MainViewModel"
              x:Class="TodoApp.MAUI.MainPage"
              Title="TodoApp">
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Command="{Binding RefreshItemsCommand}" IconImageSource="refresh.png"/>
-    </ContentPage.ToolbarItems>
-
-    <ContentPage.Content>
-        <StackLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 1" AbsoluteLayout.LayoutFlags="All" BackgroundColor="Azure">
-            <ActivityIndicator HeightRequest="4" IsRunning="{Binding IsRefreshing}" IsVisible="{Binding IsRefreshing}" Color="Red"/>
-
-            <!-- The list of items -->
-            <ListView
-                IsPullToRefreshEnabled="True"
-                IsRefreshing="{Binding IsRefreshing}"
-                ItemTapped="OnListItemTapped"
-                ItemsSource="{Binding Items}"
-                RefreshCommand="{Binding RefreshItemsCommand}">
-                <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="local:TodoItem">
-                        <ViewCell>
-                            <StackLayout Padding="10,5,10,5" Orientation="Horizontal">
-                                <Label Style="{StaticResource listItemTitle}" Text="{Binding Title}" />
-                                <Image IsVisible="{Binding IsComplete}" Style="{StaticResource listItemIcon}" />
-                            </StackLayout>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-
-            <!-- The add item control -->
-            <Frame HorizontalOptions="FillAndExpand" Style="{StaticResource roundedCorners}">
-                <StackLayout Padding="0" Orientation="Horizontal">
-                    <Image Style="{StaticResource addItemIcon}"/>
-                    <Entry x:Name="addItemEntry" MaxLength="200" Placeholder="Add New Item"
-                           Style="{StaticResource addItemEntry}"
-                           ReturnCommand="{Binding AddItemCommand}"
-                           ReturnCommandParameter="{Binding Source={x:Reference addItemEntry}}"/>
-                </StackLayout>
-            </Frame>
+    <NavigationPage.TitleView>
+        <StackLayout Style="{StaticResource titleViewContainer}">
+            <Label Style="{StaticResource titleViewLabel}">TodoApp</Label>
+            <ImageButton Style="{StaticResource titleViewRefreshIcon}" Command="{Binding RefreshItemsCommand}" />
         </StackLayout>
-    </ContentPage.Content>
+    </NavigationPage.TitleView>
+
+    <Grid AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All" BackgroundColor="Azure">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <!-- List of items -->
+        <ListView ItemsSource="{Binding Items}" ItemTapped="OnListItemTapped">
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="local:TodoItem">
+                    <ViewCell>
+                        <Grid Style="{StaticResource listItemContainer}">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+
+                            <Label Style="{StaticResource listItemTitle}" Text="{Binding Title}" />
+                            <Image Grid.Column="1" IsVisible="{Binding IsComplete}" Style="{StaticResource listItemIcon}" />
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        
+        <!-- Entry box -->
+        <Frame Grid.Row="1" Style="{StaticResource roundedCornerFrame}">
+            <HorizontalStackLayout>
+                <Image Style="{StaticResource addItemIcon}" />
+                <Entry 
+                    x:Name="addItemEntry" 
+                    Style="{StaticResource addItemEntry}"
+                    Placeholder="Enter Todo Item Text"
+                    ReturnCommand="{Binding AddItemCommand}"
+                    ReturnCommandParameter="{Binding Source={x:Reference addItemEntry}}" />
+            </HorizontalStackLayout>
+        </Frame>
+    </Grid>
 </ContentPage>
