Added Loaded event handler

--- a/samples/TodoApp/TodoApp.WinUI/MainWindow.xaml
+++ b/samples/TodoApp/TodoApp.WinUI/MainWindow.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid x:Name="mainContainer">
+    <Grid x:Name="mainContainer" Loaded="GridLoadedEventHandler">
         <Grid.Resources>
             <local:BoolToVisibilityConverter x:Key="vis"/>
         </Grid.Resources>
